--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -566,7 +566,7 @@
     "'''\n",
     "def transformB(B):\n",
     "    # Transform B as indicated in the text above\n",
-    "    B = B.map(lambda x: (x[1], (1, x[0], x[2])))\n",
+    "    B = B.map(lambda x: (x[0][1], (1, x[0][0], x[1])))\n",
     "    return B\n",
     "\n",
     "################## END MODIFICATIONS ##################\n",
