--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -531,6 +531,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 0), 4.0),\n",
+       " ((0, 1), 2.0),\n",
+       " ((0, 2), 2.0),\n",
+       " ((0, 3), 324.0),\n",
+       " ((0, 4), 23.0),\n",
+       " ((1, 0), 1.0),\n",
+       " ((1, 1), 3.0),\n",
+       " ((1, 2), 3.0),\n",
+       " ((1, 3), 333.0),\n",
+       " ((1, 4), 423.0),\n",
+       " ((2, 0), 23.0),\n",
+       " ((2, 1), 34.0),\n",
+       " ((2, 2), 12.0),\n",
+       " ((2, 3), 12.0),\n",
+       " ((2, 4), 0.0)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
