--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -531,41 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 0), 4.0),\n",
-       " ((0, 1), 2.0),\n",
-       " ((0, 2), 2.0),\n",
-       " ((0, 3), 324.0),\n",
-       " ((0, 4), 23.0),\n",
-       " ((1, 0), 1.0),\n",
-       " ((1, 1), 3.0),\n",
-       " ((1, 2), 3.0),\n",
-       " ((1, 3), 333.0),\n",
-       " ((1, 4), 423.0),\n",
-       " ((2, 0), 23.0),\n",
-       " ((2, 1), 34.0),\n",
-       " ((2, 2), 12.0),\n",
-       " ((2, 3), 12.0),\n",
-       " ((2, 4), 0.0)]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -576,10 +542,18 @@
       "        1.00        2.00        4.00\n",
       "        2.00        3.00       10.00\n",
       "       12.00       15.00      150.00\n",
+      "Matrix: 'B'\n",
+      "        4.00        2.00        2.00      324.00       23.00\n",
+      "        1.00        3.00        3.00      333.00      423.00\n",
+      "       23.00       34.00       12.00       12.00        0.00\n",
       "\n",
       "********** Representation for A ************\n",
       "\n",
-      "[(0, (0, 0, 1.0)), (1, (0, 0, 2.0)), (2, (0, 0, 4.0)), (0, (0, 1, 2.0)), (1, (0, 1, 3.0)), (2, (0, 1, 10.0)), (0, (0, 2, 12.0)), (1, (0, 2, 15.0)), (2, (0, 2, 150.0))]\n"
+      "[(0, (0, 0, 1.0)), (1, (0, 0, 2.0)), (2, (0, 0, 4.0)), (0, (0, 1, 2.0)), (1, (0, 1, 3.0)), (2, (0, 1, 10.0)), (0, (0, 2, 12.0)), (1, (0, 2, 15.0)), (2, (0, 2, 150.0))]\n",
+      "\n",
+      "********** Representation for B ************\n",
+      "\n",
+      "[(0, (1, 0, 4.0)), (1, (1, 0, 2.0)), (2, (1, 0, 2.0)), (3, (1, 0, 324.0)), (4, (1, 0, 23.0)), (0, (1, 1, 1.0)), (1, (1, 1, 3.0)), (2, (1, 1, 3.0)), (3, (1, 1, 333.0)), (4, (1, 1, 423.0)), (0, (1, 2, 23.0)), (1, (1, 2, 34.0)), (2, (1, 2, 12.0)), (3, (1, 2, 12.0)), (4, (1, 2, 0.0))]\n"
      ]
     }
    ],
@@ -607,17 +581,17 @@
     "\n",
     "# Displayes the two matrices\n",
     "nice(\"A\", A)\n",
-    "# nice(\"B\", B)\n",
+    "nice(\"B\", B)\n",
     "\n",
     "# Transforms them\n",
     "Atransformed = transformA(A)\n",
-    "# Btransformed = transformB(B)\n",
+    "Btransformed = transformB(B)\n",
     "\n",
     "# Display the result.\n",
     "print(\"\\n********** Representation for A ************\\n\")\n",
     "print(Atransformed.collect())\n",
-    "# print(\"\\n********** Representation for B ************\\n\")\n",
-    "# print(Btransformed.collect())\n"
+    "print(\"\\n********** Representation for B ************\\n\")\n",
+    "print(Btransformed.collect())\n"
    ]
   },
   {
