--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -666,8 +666,7 @@
     "merged = merge(Atransformed, Btransformed)    \n",
     "\n",
     "print(\"\\n********** Representation for merged ************\\n\")\n",
-    "print(merged.collect())\n",
-    "\n"
+    "print(merged.collect())"
    ]
   },
   {
