--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -595,22 +595,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>\n",
-    "<font size=\"3\">\n",
     "In order to group all the elements of both matrices by the key $j$, we need to merge the two RDDs $Atransformed$ and $Btransformed$.\n",
     "The function $merge()$ declared below takes in $Atransformed$ and $Btransformed$ and returns an RDD that results from the union of the two input RDDs.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "<p align=\"justify\">\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    " <font  size=\"3\" color='#91053d'>**Complete the definition of the functions $merge()$ and execute the code**</font>\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    "</p>\n",
-    "\n"
+    "**Complete the definition of the functions $merge()$ and execute the code**"
    ]
   },
   {
