--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -634,23 +634,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>\n",
-    "<font size=\"3\">\n",
     "Now we can group the values of the RDD $merged$ obtained above by their key $j$. \n",
     "We define a function $group()$ that returns an RDD obtained by grouping the values of the input RDD by their key.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
     "\n",
-    "<p align=\"justify\">\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    " <font  size=\"3\" color='#91053d'>**Complete the definition of the functions $group()$ and execute the code**</font>\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    "</p>\n",
-    "\n"
+    "**Complete the definition of the functions $group()$ and execute the code**"
    ]
   },
   {
