--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -619,7 +619,8 @@
     "    ################## COMPLETE HERE FOLLOWING THE INSTRUCTIONS ##################\n",
     "    \n",
     "    # Put together the two input RDDs\n",
-    "    R = \n",
+    "    R = Atransformed.join(Btransformed)\n",
+    "    R = R.map(lambda x: ((x[1][0][1], x[1][1][1]), x[1][0][2]*x[1][1][2]))\n",
     "    return R\n",
     "\n",
     "    ################## END MODIFICATIONS ##################\n",
