--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -607,9 +607,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix: 'A'\n",
+      "        1.00        2.00        4.00\n",
+      "        2.00        3.00       10.00\n",
+      "       12.00       15.00      150.00\n",
+      "Matrix: 'B'\n",
+      "        4.00        2.00        2.00      324.00       23.00\n",
+      "        1.00        3.00        3.00      333.00      423.00\n",
+      "       23.00       34.00       12.00       12.00        0.00\n",
+      "\n",
+      "********** Representation for merged ************\n",
+      "\n",
+      "[((0, 0), 4.0), ((0, 1), 1.0), ((0, 2), 23.0), ((1, 0), 8.0), ((1, 1), 2.0), ((1, 2), 46.0), ((2, 0), 48.0), ((2, 1), 12.0), ((2, 2), 276.0), ((0, 0), 4.0), ((0, 1), 6.0), ((0, 2), 68.0), ((1, 0), 6.0), ((1, 1), 9.0), ((1, 2), 102.0), ((2, 0), 30.0), ((2, 1), 45.0), ((2, 2), 510.0), ((0, 0), 8.0), ((0, 1), 12.0), ((0, 2), 48.0), ((1, 0), 20.0), ((1, 1), 30.0), ((1, 2), 120.0), ((2, 0), 300.0), ((2, 1), 450.0), ((2, 2), 1800.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Returns the union of Atransformed and Btransformed.\n",
@@ -630,8 +649,10 @@
     "    \n",
     "merged = merge(Atransformed, Btransformed)    \n",
     "\n",
-    "print(\"\\n********** Representation for merged ************\\n\")\n",
-    "print(merged.collect())"
+    "nice(\"merged\", merged)\n",
+    "\n",
+    "# print(\"\\n********** Representation for merged ************\\n\")\n",
+    "# print(merged.collect())"
    ]
   },
   {
