--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -622,10 +622,10 @@
       "        4.00        2.00        2.00      324.00       23.00\n",
       "        1.00        3.00        3.00      333.00      423.00\n",
       "       23.00       34.00       12.00       12.00        0.00\n",
-      "\n",
-      "********** Representation for merged ************\n",
-      "\n",
-      "[((0, 0), 4.0), ((0, 1), 1.0), ((0, 2), 23.0), ((1, 0), 8.0), ((1, 1), 2.0), ((1, 2), 46.0), ((2, 0), 48.0), ((2, 1), 12.0), ((2, 2), 276.0), ((0, 0), 4.0), ((0, 1), 6.0), ((0, 2), 68.0), ((1, 0), 6.0), ((1, 1), 9.0), ((1, 2), 102.0), ((2, 0), 30.0), ((2, 1), 45.0), ((2, 2), 510.0), ((0, 0), 8.0), ((0, 1), 12.0), ((0, 2), 48.0), ((1, 0), 20.0), ((1, 1), 30.0), ((1, 2), 120.0), ((2, 0), 300.0), ((2, 1), 450.0), ((2, 2), 1800.0)]\n"
+      "Matrix: 'merged'\n",
+      "        4.00        4.00        8.00        1.00        6.00       12.00       23.00       48.00       68.00\n",
+      "        6.00        8.00       20.00        2.00        9.00       30.00       46.00      102.00      120.00\n",
+      "       30.00       48.00      300.00       12.00       45.00      450.00      276.00      510.00     1800.00\n"
      ]
     }
    ],
