--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -30,14 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os import getcwd\n",
     "from os.path import join, isfile, dirname, abspath, pardir, exists\n",
     "from pathlib import Path\n",
-    "import test_spark"
+    "import test_spark\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
    ]
   },
   {
