--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -408,34 +408,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 0), 1.0),\n",
-       " ((0, 1), 2.0),\n",
-       " ((0, 2), 4.0),\n",
-       " ((1, 0), 2.0),\n",
-       " ((1, 1), 3.0),\n",
-       " ((1, 2), 10.0),\n",
-       " ((2, 0), 12.0),\n",
-       " ((2, 1), 15.0),\n",
-       " ((2, 2), 150.0)]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -534,9 +506,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTransforms the RDD matrix A into an RDD as described in Equation (2)\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTransforms the RDD matrix B into an RDD as described in Equation (3)\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -556,7 +548,7 @@
       "\n",
       "********** Representation for B ************\n",
       "\n",
-      "[(0, (1, 0, 4.0)), (1, (1, 0, 2.0)), (2, (1, 0, 2.0)), (3, (1, 0, 324.0)), (4, (1, 0, 23.0)), (0, (1, 1, 1.0)), (1, (1, 1, 3.0)), (2, (1, 1, 3.0)), (3, (1, 1, 333.0)), (4, (1, 1, 423.0)), (0, (1, 2, 23.0)), (1, (1, 2, 34.0)), (2, (1, 2, 12.0)), (3, (1, 2, 12.0)), (4, (1, 2, 0.0))]\n"
+      "[(0, (1, 0, 4.0)), (0, (1, 1, 2.0)), (0, (1, 2, 2.0)), (0, (1, 3, 324.0)), (0, (1, 4, 23.0)), (1, (1, 0, 1.0)), (1, (1, 1, 3.0)), (1, (1, 2, 3.0)), (1, (1, 3, 333.0)), (1, (1, 4, 423.0)), (2, (1, 0, 23.0)), (2, (1, 1, 34.0)), (2, (1, 2, 12.0)), (2, (1, 3, 12.0)), (2, (1, 4, 0.0))]\n"
      ]
     }
    ],
@@ -593,8 +585,8 @@
     "# Display the result.\n",
     "print(\"\\n********** Representation for A ************\\n\")\n",
     "print(Atransformed.collect())\n",
-    "print(\"\\n********** Representation for B ************\\n\")\n",
-    "print(Btransformed.collect())\n"
+    "# print(\"\\n********** Representation for B ************\\n\")\n",
+    "# print(Btransformed.collect())\n"
    ]
   },
   {
@@ -606,6 +598,59 @@
     "The function $merge()$ declared below takes in $Atransformed$ and $Btransformed$ and returns an RDD that results from the union of the two input RDDs.\n",
     "\n",
     "**Complete the definition of the functions $merge()$ and execute the code**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (0, 0, 1.0)),\n",
+       " (1, (0, 0, 2.0)),\n",
+       " (2, (0, 0, 4.0)),\n",
+       " (0, (0, 1, 2.0)),\n",
+       " (1, (0, 1, 3.0)),\n",
+       " (2, (0, 1, 10.0)),\n",
+       " (0, (0, 2, 12.0)),\n",
+       " (1, (0, 2, 15.0)),\n",
+       " (2, (0, 2, 150.0))]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (1, 0, 4.0)),\n",
+       " (0, (1, 1, 2.0)),\n",
+       " (0, (1, 2, 2.0)),\n",
+       " (0, (1, 3, 324.0)),\n",
+       " (0, (1, 4, 23.0)),\n",
+       " (1, (1, 0, 1.0)),\n",
+       " (1, (1, 1, 3.0)),\n",
+       " (1, (1, 2, 3.0)),\n",
+       " (1, (1, 3, 333.0)),\n",
+       " (1, (1, 4, 423.0)),\n",
+       " (2, (1, 0, 23.0)),\n",
+       " (2, (1, 1, 34.0)),\n",
+       " (2, (1, 2, 12.0)),\n",
+       " (2, (1, 3, 12.0)),\n",
+       " (2, (1, 4, 0.0))]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Atransformed.collect()\n",
+    "Btransformed.collect()"
    ]
   },
   {
