--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -651,9 +651,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nReturns the union of Atransformed and Btransformed.\\n'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -667,9 +677,9 @@
       "        1.00        3.00        3.00      333.00      423.00\n",
       "       23.00       34.00       12.00       12.00        0.00\n",
       "Matrix: 'merged'\n",
-      "        4.00        4.00        8.00        1.00        6.00       12.00       23.00       48.00       68.00\n",
-      "        6.00        8.00       20.00        2.00        9.00       30.00       46.00      102.00      120.00\n",
-      "       30.00       48.00      300.00       12.00       45.00      450.00      276.00      510.00     1800.00\n"
+      "        2.00        4.00       92.00        2.00        6.00      136.00        2.00        6.00       48.00       48.00      324.00      666.00        0.00       23.00      846.00\n",
+      "        3.00        8.00      230.00        4.00        9.00      340.00        4.00        9.00      120.00      120.00      648.00      999.00        0.00       46.00     1269.00\n",
+      "       15.00       48.00     3450.00       24.00       45.00     5100.00       24.00       45.00     1800.00     1800.00     3888.00     4995.00        0.00      276.00     6345.00\n"
      ]
     }
    ],
@@ -699,7 +709,9 @@
     "    \n",
     "merged = merge(Atransformed, Btransformed)    \n",
     "\n",
-    "nice(\"merged\", merged)\n",
+    "# nice(\"merged\", merged)\n",
+    "\n",
+    "merge.\n",
     "\n",
     "# print(\"\\n********** Representation for merged ************\\n\")\n",
     "# print(merged.collect())"
