--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "'\\nReturns the union of Atransformed and Btransformed.\\n'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -709,9 +709,7 @@
     "    \n",
     "merged = merge(Atransformed, Btransformed)    \n",
     "\n",
-    "# nice(\"merged\", merged)\n",
-    "\n",
-    "merge.\n",
+    "nice(\"merged\", merged)\n",
     "\n",
     "# print(\"\\n********** Representation for merged ************\\n\")\n",
     "# print(merged.collect())"
