--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -717,6 +717,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 0), 4.0),\n",
+       " ((0, 1), 2.0),\n",
+       " ((0, 2), 2.0),\n",
+       " ((0, 3), 324.0),\n",
+       " ((0, 4), 23.0),\n",
+       " ((1, 0), 8.0),\n",
+       " ((1, 1), 4.0),\n",
+       " ((1, 2), 4.0),\n",
+       " ((1, 3), 648.0),\n",
+       " ((1, 4), 46.0),\n",
+       " ((2, 0), 48.0),\n",
+       " ((2, 1), 24.0),\n",
+       " ((2, 2), 24.0),\n",
+       " ((2, 3), 3888.0),\n",
+       " ((2, 4), 276.0),\n",
+       " ((0, 0), 2.0),\n",
+       " ((0, 1), 6.0),\n",
+       " ((0, 2), 6.0),\n",
+       " ((0, 3), 666.0),\n",
+       " ((0, 4), 846.0),\n",
+       " ((1, 0), 3.0),\n",
+       " ((1, 1), 9.0),\n",
+       " ((1, 2), 9.0),\n",
+       " ((1, 3), 999.0),\n",
+       " ((1, 4), 1269.0),\n",
+       " ((2, 0), 15.0),\n",
+       " ((2, 1), 45.0),\n",
+       " ((2, 2), 45.0),\n",
+       " ((2, 3), 4995.0),\n",
+       " ((2, 4), 6345.0),\n",
+       " ((0, 0), 92.0),\n",
+       " ((0, 1), 136.0),\n",
+       " ((0, 2), 48.0),\n",
+       " ((0, 3), 48.0),\n",
+       " ((0, 4), 0.0),\n",
+       " ((1, 0), 230.0),\n",
+       " ((1, 1), 340.0),\n",
+       " ((1, 2), 120.0),\n",
+       " ((1, 3), 120.0),\n",
+       " ((1, 4), 0.0),\n",
+       " ((2, 0), 3450.0),\n",
+       " ((2, 1), 5100.0),\n",
+       " ((2, 2), 1800.0),\n",
+       " ((2, 3), 1800.0),\n",
+       " ((2, 4), 0.0)]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
