--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "'\\nReturns the union of Atransformed and Btransformed.\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -692,13 +692,13 @@
     "    ################## COMPLETE HERE FOLLOWING THE INSTRUCTIONS ##################\n",
     "    \n",
     "    # Put together the two input RDDs\n",
-    "    # R = Atransformed.join(Btransformed)\n",
-    "    # R = R.map(lambda x: ((x[1][0][1], x[1][1][1]), x[1][0][2]*x[1][1][2]))\n",
+    "    R = Atransformed.join(Btransformed)\n",
+    "    R = R.map(lambda x: ((x[1][0][1], x[1][1][1]), x[1][0][2]*x[1][1][2]))\n",
     "\n",
-    "    R = Atransformed.union(Btransformed).groupByKey().mapValues(lambda x: list(x))\n",
-    "    R = R.map(lambda x: (x[0], [i for i in x[1] if i[0] == 0], [i for i in x[1] if i[0] == 1]))\n",
-    "    R = R.map(lambda x: (x[0], [(i[1], j[1], i[2]*j[2]) for i in x[1] for j in x[2]]))\n",
-    "    R = R.flatMap(lambda x: x[1]).map(lambda x: ((x[0], x[1]), x[2]))\n",
+    "    # R = Atransformed.union(Btransformed).groupByKey().mapValues(lambda x: list(x))\n",
+    "    # R = R.map(lambda x: (x[0], [i for i in x[1] if i[0] == 0], [i for i in x[1] if i[0] == 1]))\n",
+    "    # R = R.map(lambda x: (x[0], [(i[1], j[1], i[2]*j[2]) for i in x[1] for j in x[2]]))\n",
+    "    # R = R.flatMap(lambda x: x[1]).map(lambda x: ((x[0], x[1]), x[2]))\n",
     "    \n",
     "    return R\n",
     "\n",
@@ -713,79 +713,6 @@
     "\n",
     "# print(\"\\n********** Representation for merged ************\\n\")\n",
     "# print(merged.collect())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 0), 4.0),\n",
-       " ((0, 1), 2.0),\n",
-       " ((0, 2), 2.0),\n",
-       " ((0, 3), 324.0),\n",
-       " ((0, 4), 23.0),\n",
-       " ((1, 0), 8.0),\n",
-       " ((1, 1), 4.0),\n",
-       " ((1, 2), 4.0),\n",
-       " ((1, 3), 648.0),\n",
-       " ((1, 4), 46.0),\n",
-       " ((2, 0), 48.0),\n",
-       " ((2, 1), 24.0),\n",
-       " ((2, 2), 24.0),\n",
-       " ((2, 3), 3888.0),\n",
-       " ((2, 4), 276.0),\n",
-       " ((0, 0), 2.0),\n",
-       " ((0, 1), 6.0),\n",
-       " ((0, 2), 6.0),\n",
-       " ((0, 3), 666.0),\n",
-       " ((0, 4), 846.0),\n",
-       " ((1, 0), 3.0),\n",
-       " ((1, 1), 9.0),\n",
-       " ((1, 2), 9.0),\n",
-       " ((1, 3), 999.0),\n",
-       " ((1, 4), 1269.0),\n",
-       " ((2, 0), 15.0),\n",
-       " ((2, 1), 45.0),\n",
-       " ((2, 2), 45.0),\n",
-       " ((2, 3), 4995.0),\n",
-       " ((2, 4), 6345.0),\n",
-       " ((0, 0), 92.0),\n",
-       " ((0, 1), 136.0),\n",
-       " ((0, 2), 48.0),\n",
-       " ((0, 3), 48.0),\n",
-       " ((0, 4), 0.0),\n",
-       " ((1, 0), 230.0),\n",
-       " ((1, 1), 340.0),\n",
-       " ((1, 2), 120.0),\n",
-       " ((1, 3), 120.0),\n",
-       " ((1, 4), 0.0),\n",
-       " ((2, 0), 3450.0),\n",
-       " ((2, 1), 5100.0),\n",
-       " ((2, 2), 1800.0),\n",
-       " ((2, 3), 1800.0),\n",
-       " ((2, 4), 0.0)]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Atransformed.union(Btransformed).groupByKey().mapValues(lambda x: list(x))"
    ]
   },
   {
