--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -692,13 +692,13 @@
     "    ################## COMPLETE HERE FOLLOWING THE INSTRUCTIONS ##################\n",
     "    \n",
     "    # Put together the two input RDDs\n",
-    "    R = Atransformed.join(Btransformed)\n",
-    "    R = R.map(lambda x: ((x[1][0][1], x[1][1][1]), x[1][0][2]*x[1][1][2]))\n",
+    "    # R = Atransformed.join(Btransformed)\n",
+    "    # R = R.map(lambda x: ((x[1][0][1], x[1][1][1]), x[1][0][2]*x[1][1][2]))\n",
     "\n",
-    "    # R = Atransformed.union(Btransformed).groupByKey().mapValues(lambda x: list(x))\n",
-    "    # R = R.map(lambda x: (x[0], [i for i in x[1] if i[0] == 0], [i for i in x[1] if i[0] == 1]))\n",
-    "    # R = R.map(lambda x: (x[0], [(i[1], j[1], i[2]*j[2]) for i in x[1] for j in x[2]]))\n",
-    "    # R = R.flatMap(lambda x: x[1]).map(lambda x: ((x[0], x[1]), x[2]))\n",
+    "    R = Atransformed.union(Btransformed).groupByKey().mapValues(lambda x: list(x))\n",
+    "    R = R.map(lambda x: (x[0], [i for i in x[1] if i[0] == 0], [i for i in x[1] if i[0] == 1]))\n",
+    "    R = R.map(lambda x: (x[0], [(i[1], j[1], i[2]*j[2]) for i in x[1] for j in x[2]]))\n",
+    "    R = R.flatMap(lambda x: x[1]).map(lambda x: ((x[0], x[1]), x[2]))\n",
     "    \n",
     "    return R\n",
     "\n",
