--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -805,7 +805,7 @@
     "    ################## COMPLETE HERE FOLLOWING THE INSTRUCTIONS ##################\n",
     "    \n",
     "    # Groups the element of the input RDD by key.\n",
-    "    R = \n",
+    "    R = merged.groupByKey().mapValues(lambda x: list(x))\n",
     "    return R\n",
     "\n",
     "    ################## END MODIFICATIONS ##################\n",
