--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -793,9 +793,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nReturns an RDD where the values of the input RDD are grouped by their key.\\n'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix: 'A'\n",
+      "        1.00        2.00        4.00\n",
+      "        2.00        3.00       10.00\n",
+      "       12.00       15.00      150.00\n",
+      "Matrix: 'B'\n",
+      "        4.00        2.00        2.00      324.00       23.00\n",
+      "        1.00        3.00        3.00      333.00      423.00\n",
+      "       23.00       34.00       12.00       12.00        0.00\n",
+      "\n",
+      "********** Representation for grouped ************\n",
+      "\n",
+      "[\n",
+      "((0, 2),[2.06.048.0],\n",
+      "((1, 1),[4.09.0340.0],\n",
+      "((2, 0),[48.015.03450.0],\n",
+      "((2, 4),[276.06345.00.0],\n",
+      "((0, 1),[2.06.0136.0],\n",
+      "((1, 2),[4.09.0120.0],\n",
+      "((2, 3),[3888.04995.01800.0],\n",
+      "((0, 0),[4.02.092.0],\n",
+      "((0, 4),[23.0846.00.0],\n",
+      "((1, 3),[648.0999.0120.0],\n",
+      "((2, 2),[24.045.01800.0],\n",
+      "((0, 3),[324.0666.048.0],\n",
+      "((1, 0),[8.03.0230.0],\n",
+      "((1, 4),[46.01269.00.0],\n",
+      "((2, 1),[24.045.05100.0],\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Returns an RDD where the values of the input RDD are grouped by their key.\n",
@@ -822,7 +867,7 @@
     "    print(\"(\",l[0], \",\", end='', sep='')\n",
     "    print(\"[\", end='')\n",
     "    for el in l[1]:\n",
-    "        print(el, end=\"\")\n",
+    "        print(el, end=\" * \")\n",
     "    print(\"],\")\n",
     "print(']')\n",
     "\n",
