--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -651,10 +651,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, ((0, 0, 1.0), (1, 0, 4.0))),\n",
+       " (0, ((0, 0, 1.0), (1, 1, 2.0))),\n",
+       " (0, ((0, 0, 1.0), (1, 2, 2.0))),\n",
+       " (0, ((0, 0, 1.0), (1, 3, 324.0))),\n",
+       " (0, ((0, 0, 1.0), (1, 4, 23.0))),\n",
+       " (0, ((0, 1, 2.0), (1, 0, 4.0))),\n",
+       " (0, ((0, 1, 2.0), (1, 1, 2.0))),\n",
+       " (0, ((0, 1, 2.0), (1, 2, 2.0))),\n",
+       " (0, ((0, 1, 2.0), (1, 3, 324.0))),\n",
+       " (0, ((0, 1, 2.0), (1, 4, 23.0))),\n",
+       " (0, ((0, 2, 12.0), (1, 0, 4.0))),\n",
+       " (0, ((0, 2, 12.0), (1, 1, 2.0))),\n",
+       " (0, ((0, 2, 12.0), (1, 2, 2.0))),\n",
+       " (0, ((0, 2, 12.0), (1, 3, 324.0))),\n",
+       " (0, ((0, 2, 12.0), (1, 4, 23.0))),\n",
+       " (1, ((0, 0, 2.0), (1, 0, 1.0))),\n",
+       " (1, ((0, 0, 2.0), (1, 1, 3.0))),\n",
+       " (1, ((0, 0, 2.0), (1, 2, 3.0))),\n",
+       " (1, ((0, 0, 2.0), (1, 3, 333.0))),\n",
+       " (1, ((0, 0, 2.0), (1, 4, 423.0))),\n",
+       " (1, ((0, 1, 3.0), (1, 0, 1.0))),\n",
+       " (1, ((0, 1, 3.0), (1, 1, 3.0))),\n",
+       " (1, ((0, 1, 3.0), (1, 2, 3.0))),\n",
+       " (1, ((0, 1, 3.0), (1, 3, 333.0))),\n",
+       " (1, ((0, 1, 3.0), (1, 4, 423.0))),\n",
+       " (1, ((0, 2, 15.0), (1, 0, 1.0))),\n",
+       " (1, ((0, 2, 15.0), (1, 1, 3.0))),\n",
+       " (1, ((0, 2, 15.0), (1, 2, 3.0))),\n",
+       " (1, ((0, 2, 15.0), (1, 3, 333.0))),\n",
+       " (1, ((0, 2, 15.0), (1, 4, 423.0))),\n",
+       " (2, ((0, 0, 4.0), (1, 0, 23.0))),\n",
+       " (2, ((0, 0, 4.0), (1, 1, 34.0))),\n",
+       " (2, ((0, 0, 4.0), (1, 2, 12.0))),\n",
+       " (2, ((0, 0, 4.0), (1, 3, 12.0))),\n",
+       " (2, ((0, 0, 4.0), (1, 4, 0.0))),\n",
+       " (2, ((0, 1, 10.0), (1, 0, 23.0))),\n",
+       " (2, ((0, 1, 10.0), (1, 1, 34.0))),\n",
+       " (2, ((0, 1, 10.0), (1, 2, 12.0))),\n",
+       " (2, ((0, 1, 10.0), (1, 3, 12.0))),\n",
+       " (2, ((0, 1, 10.0), (1, 4, 0.0))),\n",
+       " (2, ((0, 2, 150.0), (1, 0, 23.0))),\n",
+       " (2, ((0, 2, 150.0), (1, 1, 34.0))),\n",
+       " (2, ((0, 2, 150.0), (1, 2, 12.0))),\n",
+       " (2, ((0, 2, 150.0), (1, 3, 12.0))),\n",
+       " (2, ((0, 2, 150.0), (1, 4, 0.0)))]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Atransformed.join(Btransformed).collect()"
+   ]
   },
   {
    "cell_type": "code",
