--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -943,50 +943,34 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>\n",
-    "<font size=\"3\">\n",
     "Each element of the RDD $grouped$ obtained above is a key-value pair, where the key is the index $j$ and the value is a list $L$ containing all the triples corresponding to the elements of matrix $A$ in the $j-$th column  and the elements of matrix $B$  in the $j-$row, as follows: \n",
-    "<p>\n",
-    "<center>\n",
+    "\n",
     "$(0, i, a_{i, j})\\ 0 \\leq i \\leq n-1 \\quad (1, k, b_{j, k})\\ 0 \\leq k \\leq p-1$\n",
-    "</center>\n",
-    "</p>\n",
-    "<p>\n",
+    "\n",
     "Remember that all triples corresponding to matrix $A$ have 0 as their first value, while those corresponding to matrix $B$ have 1.\n",
-    "</p>\n",
-    "<p>\n",
+    "\n",
     "From Equation (1), you can see that the product $a_{i, j} \\cdot b_{j, k}$ contributes to the value $c_{i, k}$, for $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$. \n",
     "Therefore, given the list $L$, we associate each value $a_{i, j} \\cdot b_{j, k}$  to the pair $(i, k)$.\n",
-    "</p>\n",
-    "<p>\n",
+    "\n",
     "In other words, we now transform the RDD $grouped$ into an RDD where \n",
     "each element is a key-value pair, where the key is $(i, k)$ and the value is $a_{i, j} \\cdot b_{j, k}$.\n",
     "\n",
-    "</p>    \n",
-    "<p>\n",
+    "\n",
     "In the code below, the function $multiplyElements()$ is given that takes in a value $(j, L)$ of the RDD $grouped$ \n",
-    "and returns a list, where each element is a pair $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$.  \n",
-    "</p>\n",
-    "</font>\n",
-    "</p>\n",
+    "and returns a list, where each element is a pair $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$.\n",
     "\n",
     "\n",
-    "<p align=\"justify\">\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    " <font  size=\"3\" color='#91053d'>**Complete the definition of the function $groupProducts()$ that:\n",
-    "    <ul>\n",
-    "      <li> Takes in the RDD $grouped$.\n",
-    "      <li> Applies the function $multiplyElements()$ to each element of $grouped$.\n",
-    "      <li> Returns an RDD where each element is $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$. \n",
-    "    </ul>\n",
-    "    Execute the code.**</font>\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    "</p>\n",
+    "**Complete the definition of the function $groupProducts()$ that: \n",
     "\n",
-    "\n"
+    "- Takes in the RDD $grouped$. \n",
+    "- Applies the function $multiplyElements()$ to each element of $grouped$. \n",
+    "- Returns an RDD where each element is $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$. \n",
+    "\n",
+    "Execute the code.**"
    ]
   },
   {
