--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -964,13 +964,13 @@
     "and returns a list, where each element is a pair $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$.\n",
     "\n",
     "\n",
-    "**Complete the definition of the function $groupProducts()$ that: \n",
+    "**Complete the definition of the function $groupProducts()$ that**:\n",
     "\n",
     "- Takes in the RDD $grouped$. \n",
     "- Applies the function $multiplyElements()$ to each element of $grouped$. \n",
     "- Returns an RDD where each element is $((i, k), a_{i, j} \\cdot b_{j, k})$, $0 \\leq i \\leq n-1$ and $0 \\leq k \\leq p-1$. \n",
     "\n",
-    "Execute the code.**"
+    "**Execute the code.**"
    ]
   },
   {
