--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -1032,7 +1032,7 @@
     "    \n",
     "    # Apply a transformation to the input RDD to get an RDD as described in the text.\n",
     "    # Which tranformations are you going to use? map or flatMap?\n",
-    "    R = \n",
+    "    R = grouped.map(lambda x: multiplyElements(x))\n",
     "    return R\n",
     "    \n",
     "    ################## END MODIFICATIONS ##################\n",
