--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -41,15 +41,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'networkx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnx\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Implementing the Independent Cascade Model\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'networkx'"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "import random\n",
+    "\n",
+    "# Implementing the Independent Cascade Model\n",
+    "def ic(G, S):\n",
+    "    infected = set(S) # initially, only seed nodes are infected\n",
+    "    active = set(S)\n",
+    "    while active:\n",
+    "        new_active = set()\n",
+    "        for node in active:\n",
+    "            for neighbor in G.neighbors(node):\n",
+    "                if neighbor not in infected:\n",
+    "                    if random.random() < G[node][neighbor]['weight']:\n",
+    "                        infected.add(neighbor)\n",
+    "                        new_active.add(neighbor)\n",
+    "        active = new_active\n",
+    "    return infected\n",
+    "\n",
+    "# Implementing the Linear Threshold Model\n",
+    "def lt(G, S):\n",
+    "    infected = set(S) # initially, only seed nodes are infected\n",
+    "    threshold = {node: random.random() for node in G.nodes()}\n",
+    "    active = set(S)\n",
+    "    while active:\n",
+    "        new_active = set()\n",
+    "        for node in active:\n",
+    "            for neighbor in G.neighbors(node):\n",
+    "                if neighbor not in infected:\n",
+    "                    weight = 0\n",
+    "                    for neighbor_of_neighbor in G.neighbors(neighbor):\n",
+    "                        if neighbor_of_neighbor in infected:\n",
+    "                            weight += G[neighbor_of_neighbor][neighbor]['weight']\n",
+    "                    if weight >= threshold[neighbor]:\n",
+    "                        infected.add(neighbor)\n",
+    "                        new_active.add(neighbor)\n",
+    "        active = new_active\n",
+    "    return infected\n",
+    "\n",
+    "# Creating a graph\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "# Adding edges to the graph\n",
+    "G.add_edge(1, 2, weight=0.1)\n",
+    "G.add_edge(1, 3, weight=0.2)\n",
+    "G.add_edge(2, 4, weight=0.3)\n",
+    "G.add_edge(3, 4, weight=0.4)\n",
+    "\n",
+    "# Setting the seed nodes\n",
+    "S = [1]\n",
+    "\n",
+    "# Running the Independent Cascade Model\n",
+    "infected_nodes_ic = ic(G, S)\n",
+    "print(\"Infected nodes (Independent Cascade Model):\", infected_nodes_ic)\n",
+    "\n",
+    "# Running the Linear Threshold Model\n",
+    "infected_nodes_lt = lt(G, S)\n",
+    "print(\"Infected nodes (Linear Threshold Model):\", infected_nodes_lt)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mgma",
    "language": "python",
    "name": "python3"
   },
@@ -63,7 +133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92ef103fe91e85206b7889fe480710be6f2a014beb113cc84edd8d6030adeb48"
+   }
   }
  },
  "nbformat": 4,
