Work in progress

--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -19,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,9 +35,17 @@
     "<li> Implement Greedy algorithm and compare the results on graphs to the different heuristics</li> \n",
     "</ol>\n",
     "</font>\n",
-    "</p>\n",
-    "\n",
-    "\n"
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "import random"
    ]
   },
   {
@@ -45,21 +54,15 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'networkx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnx\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Implementing the Independent Cascade Model\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'networkx'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Infected nodes (Independent Cascade Model): {1}\n",
+      "Infected nodes (Linear Threshold Model): {1, 3}\n"
      ]
     }
    ],
    "source": [
-    "import networkx as nx\n",
-    "import random\n",
-    "\n",
     "# Implementing the Independent Cascade Model\n",
     "def ic(G, S):\n",
     "    infected = set(S) # initially, only seed nodes are infected\n",
