--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -49,6 +49,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Independant Cascade (IC) Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
