--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -40,10 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List, Set\n",
     "import networkx as nx\n",
     "import random"
    ]
@@ -61,7 +62,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ic(G: nx.Graph, S: List[int]) -> Set[int]:\n",
+    "    \"\"\"\n",
+    "    Implement Independant Cascade model using NetworkX library.\n",
+    "    Given a graph G and a list of seed nodes S, this function returns a set of infected nodes.\n",
+    "    \n",
+    "    Args:\n",
+    "    G: nx.Graph: The graph on which IC model is to be applied.\n",
+    "    S: List[int]: A list of seed nodes from which the infection starts.\n",
+    "    \n",
+    "    Returns:\n",
+    "    Set[int]: A set of infected nodes after applying IC model.\n",
+    "    \"\"\"\n",
+    "    infected: Set[int] = set(S) # Initially, infected nodes are the seed nodes\n",
+    "    for u in S:\n",
+    "        for v in G.neighbors(u):\n",
+    "            if v not in infected:\n",
+    "                # Generate a random number between 0 and 1\n",
+    "                r = random.random()\n",
+    "                if r < G[u][v]['weight']:\n",
+    "                    infected.add(v)\n",
+    "    return infected\n"
+   ]
   },
   {
    "cell_type": "code",
