--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -75,7 +75,7 @@
     "    Returns:\n",
     "    Set[int]: A set of infected nodes after applying IC model.\n",
     "    \"\"\"\n",
-    "    infected: Set[int] = set(S) # Initially, infected nodes are the seed nodes\n",
+    "    infected: Set[List[int]] = set(S) # Initially, infected nodes are the seed nodes\n",
     "    for u in S:\n",
     "        for v in G.neighbors(u):\n",
     "            if v not in infected:\n",
