--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -80,7 +80,7 @@
     "        for v in G.neighbors(u):\n",
     "            if v not in infected:\n",
     "                # Generate a random number between 0 and 1\n",
-    "                r = random.random()\n",
+    "                r: float = random.random()\n",
     "                if r < G[u][v]['weight']:\n",
     "                    infected.add(v)\n",
     "    return infected\n"
