Work in progress

--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -75,12 +75,12 @@
     "    Returns:\n",
     "    Set[int]: A set of infected nodes after applying IC model.\n",
     "    \"\"\"\n",
-    "    infected: Set[List[int]] = set(S) # Initially, infected nodes are the seed nodes\n",
+    "    infected = set(S) # Initially, infected nodes are the seed nodes\n",
     "    for u in S:\n",
     "        for v in G.neighbors(u):\n",
     "            if v not in infected:\n",
     "                # Generate a random number between 0 and 1\n",
-    "                r: float = random.random()\n",
+    "                r = random.random()\n",
     "                if r < G[u][v]['weight']:\n",
     "                    infected.add(v)\n",
     "    return infected\n"
