--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -50,6 +50,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a graph\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "# Adding edges to the graph\n",
+    "G.add_edge(1, 2, weight=0.1)\n",
+    "G.add_edge(1, 3, weight=0.2)\n",
+    "G.add_edge(2, 4, weight=0.3)\n",
+    "G.add_edge(3, 4, weight=0.4)\n",
+    "\n",
+    "# Setting the seed nodes\n",
+    "S = [1]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -59,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +102,27 @@
     "                r = random.random()\n",
     "                if r < G[u][v]['weight']:\n",
     "                    infected.add(v)\n",
-    "    return infected\n"
+    "    return infected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ic(G, S)"
    ]
   },
   {
