Work in progress

--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -40,21 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Set\n",
+    "from typing import List, Set, TypeVar\n",
     "import networkx as nx\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = TypeVar('T')\n",
+    "Any = T\n",
+    "\n",
     "# Creating a graph\n",
     "G = nx.Graph()\n",
     "\n",
@@ -103,6 +106,40 @@
     "                if r < G[u][v]['weight']:\n",
     "                    infected.add(v)\n",
     "    return infected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ic(G: nx.Graph, S: List[Any]) -> Set[Any]:\n",
+    "    \"\"\"\n",
+    "    Implement Independant Cascade model using NetworkX library.\n",
+    "    Given a graph G and a list of seed nodes S, this function returns a set of infected nodes.\n",
+    "\n",
+    "    The implementation uses a while loop and an additional set called \"active\" to keep track of the newly infected nodes.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    G (nx.Graph): The input graph\n",
+    "    S (List[Any]): The list of seed nodes\n",
+    "    \n",
+    "    Returns:\n",
+    "    Set[Any]: The set of infected nodes\n",
+    "    \"\"\"\n",
+    "    infected = set(S) # initially, only seed nodes are infected\n",
+    "    active = set(S)\n",
+    "    while active:\n",
+    "        new_active = set()\n",
+    "        for node in active:\n",
+    "            for neighbor in G.neighbors(node):\n",
+    "                if neighbor not in infected:\n",
+    "                    if random.random() < G[node][neighbor]['weight']:\n",
+    "                        infected.add(neighbor)\n",
+    "                        new_active.add(neighbor)\n",
+    "        active = new_active\n",
+    "    return infected\n"
    ]
   },
   {
