Work in progress

--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,21 +139,21 @@
     "                        infected.add(neighbor)\n",
     "                        new_active.add(neighbor)\n",
     "        active = new_active\n",
-    "    return infected\n"
+    "    return infected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1}"
+       "{1, 2}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
