Work in progress

--- a/src/lab2/src/notebooks/influence_models.ipynb
+++ b/src/lab2/src/notebooks/influence_models.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Independant Cascade (IC) Model"
+    "#### 1.1. Independant Cascade (IC) Model"
    ]
   },
   {
