--- a/src/lab5/src/notebooks/svd.ipynb
+++ b/src/lab5/src/notebooks/svd.ipynb
@@ -17,6 +17,12 @@
     "from os.path import join, isfile, dirname, abspath, pardir, exists\n",
     "from pathlib import Path\n",
     "\n",
+    "import test\n",
+    "parent_dir = Path(test.__file__).resolve().parents[1]\n",
+    "data_dir = join(parent_dir, \"data\")\n",
+    "\n",
+    "\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
    ]
@@ -26,10 +32,7 @@
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "parent_dir = Path(test_spark.__file__).resolve().parents[1]\n",
-    "data_dir = join(parent_dir, \"data\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
