--- a/src/lab5/src/notebooks/svd.ipynb
+++ b/src/lab5/src/notebooks/svd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "parent_dir = Path(test.__file__).resolve().parents[1]\n",
     "data_dir = join(parent_dir, \"data\")\n",
     "\n",
-    "\n",
+    "from sknetwork.data import karate_club\n",
+    "from sknetwork.clustering import Louvain\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -32,7 +33,14 @@
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "adjacency = karate_club()\n",
+    "algo = Louvain()\n",
+    "algo.fit(adjacency)\n",
+    "labels = algo.labels_"
+   ]
   }
  ],
  "metadata": {
@@ -52,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:48:25) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "name": "BE4-Spark.ipynb",
   "vscode": {
