Improving code organization

--- a/src/lab5/src/notebooks/svd.ipynb
+++ b/src/lab5/src/notebooks/svd.ipynb
@@ -94,12 +94,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "algo.fit(adjacency)"
+    "result = algo.fit(adjacency)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Louvain' object has no attribute '_labels'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m result\u001b[39m.\u001b[39;49m_labels\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Louvain' object has no attribute '_labels'"
+     ]
+    }
+   ],
+   "source": [
+    "result._labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
