Improving code quality

--- a/src/lab5/src/notebooks/svd.ipynb
+++ b/src/lab5/src/notebooks/svd.ipynb
@@ -94,16 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Louvain(resolution=1, modularity='dugue', tol_aggregation=0.001, n_aggregations=-1, shuffle_nodes=False, sort_clusters=True, return_membership=True, return_aggregate=True)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = algo.fit(adjacency)"
+    "algo.fit(adjacency)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +124,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m result\u001b[39m.\u001b[39;49m_labels\n",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m algo\u001b[39m.\u001b[39;49m_labels\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'Louvain' object has no attribute '_labels'"
      ]
     }
    ],
    "source": [
-    "result._labels"
+    "algo._labels"
    ]
   },
   {
