Adding missing documentation

--- a/src/lab5/src/notebooks/svd.ipynb
+++ b/src/lab5/src/notebooks/svd.ipynb
@@ -114,23 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Louvain' object has no attribute '_labels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m algo\u001b[39m.\u001b[39;49m_labels\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Louvain' object has no attribute '_labels'"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "algo._labels"
+    "list(set(algo.labels_))"
    ]
   },
   {
